--- a/preamble.tex
+++ b/preamble.tex
@@ -21,10 +21,12 @@
 % Tune styles
 % Provide a reasonable page setup
 \usepackage[margin=2.5cm,nohead]{geometry}
-\usepackage{microtype} % See http://www.khirevich.com/latex/microtype/
+% Improve line breaking, see http://www.khirevich.com/latex/microtype/
+\usepackage{microtype}
 \usepackage{authblk}
 
 % Could be removed latter
+\overfullrule=1mm
 \usepackage{lipsum}
 \usepackage{lineno}
 \linenumbers
