Add the introduction writting suggestion

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -2,5 +2,10 @@
 \section{Introduction}
 \label{sec:introduction}
 
-\lipsum[2-4]{}
+Write the introduction in this order:
+1. What is the problem domain
+2. The specific problem that the paper is solving and its importance
+3. Current approaches and their disadvantages  (literature review)
+5 .What are the contributions of the paper
+6. Subsection summary
 ~\cite{stolarska2001}
